--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     // the title for whatever rea-
     // son go ahead
     const pageTitle = "Cubical³";
+    document.title = pageTitle;
   </script>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
