--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
 </head>
 <body>
   <div id="editor">
-    <textarea id="layer1" oninput="updateCube()">drrrr|drrrr|drrrr|drrrr|drrrr</textarea>
+    <textarea id="layer1" oninput="updateCube()">eeeee|eeeee|eeeee|eeeee|eeeee</textarea>
     <textarea id="layer2" oninput="updateCube()">eeeee|eeeee|eeeee|eeeee|eeeee</textarea>
     <textarea id="layer3" oninput="updateCube()">eeeee|eeeee|eeeee|eeeee|eeeee</textarea>
     <textarea id="layer4" oninput="updateCube()">eeeee|eeeee|eeeee|eeeee|eeeee</textarea>
