fixed start AGAIN

--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
   <div id="editor">
     <details>
   <summary><span style="font-size: 10px; background-color: black; padding: 5px; border-radius: 5px; color: white;">layers</span><br></summary>
-    <textarea id="layer1" oninput="updateCube()">drrrr|drrrr|drrrr|drrrr|drrrr</textarea>
+    <textarea id="layer1" oninput="updateCube()">eeeee|eeeee|eeeee|eeeee|eeeee</textarea>
     <textarea id="layer2" oninput="updateCube()">eeeee|eeeee|eeeee|eeeee|eeeee</textarea>
     <textarea id="layer3" oninput="updateCube()">eeeee|eeeee|eeeee|eeeee|eeeee</textarea>
     <textarea id="layer4" oninput="updateCube()">eeeee|eeeee|eeeee|eeeee|eeeee</textarea>
