made title cool

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     // anyway if you wanna change
     // the title for whatever rea-
     // son go ahead
-    const pageTitle = "Cubical³";
+    const pageTitle = "|\"\'|³";
     document.title = pageTitle;
   </script>
   <meta charset="UTF-8">
